# Readnet

./: .gitignore  LICENSE  README.md  all.txt
backend/: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  server.py
backend/src/: database.py  main.py  models.py  schemas.py  services.py
backend/src/routers/: collection_router.py  contact_router.py  payment_router.py  plan_router.py  transaction_router.py  user_router.py  webhook_router.py
frontend/: .env.sample  index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/auth/: AuthClerkProtect.jsx
frontend/src/components/atoms/: ButtonAtom.jsx  InputAtom.jsx  LableAtom.jsx  SearchFormAtom.jsx  SelectAtom.jsx  TextareaAtom.jsx  VideoTextAtom.jsx
frontend/src/components/molecules/: FormMolecule.jsx
frontend/src/components/organisms/: FooterOrganism.jsx  HeaderOrganism.jsx
frontend/src/components/organisms/Index/: AccordionOrganism.jsx  ContactFormOrganism.jsx  HeroOrganism.jsx
frontend/src/components/organisms/IndexPage/: AccordionOrganism.jsx  ContactFormOrganism.jsx  HeroOrganism.jsx  PopulerViewOrganism.jsx
frontend/src/components/pages/: AuthPage.jsx  CollectionPage.jsx  IndexPage.jsx  LayoutPage.jsx  PlansPage.jsx
frontend/src/components/templates/: LayoutTemplate.jsx
frontend/src/data/: data.json  info.json
frontend/src/provider/: AuthClerkProvider.jsx  CustomClerkProtect.jsx  CustomClerkWrapper.jsx
frontend/src/store/: contactStore.jsx
frontend/src/utils/: axiosClient.jsx
