[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "boto3>=1.39.12",
    "clerk-backend-api>=3.0.7",
    "fastapi[all]>=0.116.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "razorpay>=1.4.2",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "svix>=1.69.0",
    "uvicorn>=0.35.0",
]
